[package]
name = "oryx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oryx"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
ethers = { version = "0.14.0" } 
log = "0.4"
env_logger = "0.8.4"
anyhow = "1.0"
derive-new = "0.5"
derive-getters = "0.2.0"
bigdecimal = "0.3.0"
urlencoding = "2.1.0"
serde = "1.0.136"
serde_json = "1.0"
num-format = "0.4.0"
